# gaskpass

./: .gitignore  Justfile  Makefile  README.md  gaskpass-sudo  main.c  meson.build
